<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="200px"
        android:layout_marginRight="30px"
        android:fontFamily="@font/markazi_text"
        android:text="@string/strNewPassword"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:fontFamily="@font/inter"
        android:text="@string/strEnterandConfirm"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="100px"
        android:fontFamily="@font/inter"
        android:text="@string/strEnterNewPassword"
        android:textColor="@color/darkblue"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="15px"
        android:layout_marginRight="30px">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:hint="@string/str8digits">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="50px"
        android:fontFamily="@font/inter"
        android:text="@string/strCFPassword"
        android:textColor="@color/darkblue"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="15px"
        android:layout_marginRight="30px">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_hidepw"
            android:fontFamily="@font/inter"
            android:hint="@string/strEnterPassword"
            android:inputType="textPassword">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginLeft="20px"
        android:layout_marginTop="80px"
        android:layout_marginRight="20px"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#040957"
        android:fontFamily="@font/markazi_text"
        android:text="@string/strResetPw"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="400px"
        android:layout_marginRight="30px"
        android:fontFamily="@font/inter"
        android:text="@string/strCapcha"
        android:textAlignment="center" />
</LinearLayout>