<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PasswordChangeActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="233dp"
        android:layout_height="214dp"
        android:layout_gravity="center"
        android:layout_marginTop="300px"
        app:srcCompat="@mipmap/ic_check" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:fontFamily="@font/markazi_text"
        android:text="@string/strPasswordChange"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:fontFamily="@font/inter"
        android:text="@string/strPWchange"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginLeft="20px"
        android:layout_marginTop="50px"
        android:layout_marginRight="20px"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#040957"
        android:fontFamily="@font/markazi_text"
        android:text="@string/strPWchangeBtn"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="450px"
        android:layout_marginRight="30px"
        android:fontFamily="@font/inter"
        android:text="@string/strCapcha"
        android:textAlignment="center" />
</LinearLayout>