<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_marginTop="80px"
        android:fontFamily="@font/markazi_text"
        android:text="@string/strWelcomeBack"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="48sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="15px"
        android:layout_marginRight="30px">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:hint="@string/strEnterEmail">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="15px"
        android:layout_marginRight="30px">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_hidepw"
            android:fontFamily="@font/inter"
            android:hint="@string/strEnterPassword"
            android:inputType="textPassword">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="30px"
        android:layout_marginTop="30px"
        android:fontFamily="@font/inter"
        android:text="@string/strForgotPW"
        android:textColor="@color/darkblue"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="50px"
        android:layout_marginRight="20px"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#040957"
        android:fontFamily="@font/markazi_text"
        android:text="@string/strLogin"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/line" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/strOr"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/line" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgbtnGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/strblue_stroke"
            android:padding="10dp"
            android:src="@mipmap/ic_google" />

        <ImageButton
            android:id="@+id/imgbtnFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="0"
            android:background="@drawable/strblue_stroke"
            android:padding="10dp"
            android:src="@mipmap/ic_facebook" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30px"
        android:gravity="center_horizontal">>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:fontFamily="@font/inter"
            android:text="@string/strNewAccount1"
            android:textAlignment="center"
            android:textColor="#040957" />

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:fontFamily="@font/inter"
            android:text="@string/strSignUp"
            android:textAlignment="center"
            android:textColor="#040957"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="300px"
        android:layout_marginRight="30px"
        android:fontFamily="@font/inter"
        android:text="@string/strCapcha"
        android:textAlignment="center" />

</LinearLayout>
