<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AccountVerificationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="80px"
        android:layout_marginRight="30px"
        android:fontFamily="@font/markazi_text"
        android:text="@string/strVerification"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="30px"
        android:layout_marginRight="30px"
        android:fontFamily="@font/inter"
        android:text="@string/strOTP"
        android:textAlignment="center"
        android:textColor="#040957" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"

        android:layout_marginRight="30px"
        android:fontFamily="@font/inter"
        android:text="@string/strOTP2"
        android:textAlignment="center"
        android:textColor="#040957" />

    <LinearLayout
        android:layout_marginTop="50px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtOTP1"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginLeft="120px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            android:background="@drawable/circle_text"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtOTP2"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            android:background="@drawable/circle_text"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtOTP3"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            android:background="@drawable/circle_text"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtOTP4"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30px"
            android:layout_marginRight="120px"
            android:layout_weight="1"
            android:background="@drawable/circle_text"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30px"
        android:gravity="center_horizontal">>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"

            android:fontFamily="@font/inter"
            android:text="@string/strTextResend"
            android:textAlignment="center"
            android:textColor="#040957" />

        <TextView
            android:id="@+id/txtResend"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:fontFamily="@font/inter"
            android:text="@string/strResendOTP"
            android:textAlignment="center"
            android:textColor="#040957"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="80px"
        android:layout_marginRight="20px"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#040957"
        android:fontFamily="@font/markazi_text"
        android:text="@string/strVerify"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="800px"
        android:layout_marginRight="30px"
        android:fontFamily="@font/inter"
        android:text="@string/strCapcha"
        android:textAlignment="center" />
</LinearLayout>